# SuperMemo-Toolkit

./: .gitignore  Ideas.md  README.md  SM导出样本文件ALL IN ONE.xml  cli.py  conf.json  example.xml  idea.py  index.py  pyproject.toml  requirements.txt  result.xml  setup.py  smkit.bat  smkit.py  smkit.spec  smtk.bat  smtk.py  smtk.spec  tep.md  tool.py
.github/workflows/: publish.yml
Testing/: Tkinter.tk  test.py
anki/: main.py  semantic classification.py  semantic_classification.py  web_import.py
anki/内容模版/: 样式.css
docs/: SuperMemoCollection.md  TEQA.htm  conf.py  config.json  indexer_idea.md  json Invalid escape.md  requirements.txt  smtk.spec
docs/python_lzo_win_amd64/: python_lzo-1.16-cp311-cp311-win_amd64.whl  python_lzo-1.16-cp312-cp312-win_amd64.whl  python_lzo-1.16-cp313-cp313-win_amd64.whl
docs/samples/: fenge.html
eindexer/: check_toc.py
epub2sm/: epub2sm.py  index.py
epub2sm/samples/: hello.py
epub2sm/tests/: 1.py  2.py  org_toc.py  split_page.py  structure.py
epub2sm/toc_units/: check_toc.py  org_toc.py
indexer/: main.py
latex2img/: index.py
output/: example.xml
pathpix/: README.md  gui.py  index.py  smkit.py  smkit.spec  ui.py
pathpix/test/: 1.py  10.py  2.py  4.py
picbed/: app.py  getConfig.py
scripts/: config.py
settle_toc/idea/: toc1.py
settle_toc/samples/: toc.ncx
smtk/: cli.py
smtk/epub2sm/: epub2sm.py
smtk/pathpix/: LICENSE.txt  gui.py  index.py
src/epub2sm/: epub2sm.py
src/latex2img/: index.py
src/pathpix/: gui.py  index.py
supermemo_toolkit/: smtk.py
supermemo_toolkit/autotts/: autotts.py  focus_snapshot.py  getText.py  get_doc.py  maddec.py  switcher.py  threader.py  ui.py
supermemo_toolkit/epub2sm/: epub2sm.py  epub_convert.py  format_ascii.py  sm_xml.py  smxml.py  toc_orgnize.py
supermemo_toolkit/latex2img/: formula_to_png.py
supermemo_toolkit/libs/python_lzo_win_amd64/: python_lzo-1.16-cp310-cp310-win_amd64.whl
supermemo_toolkit/pathpix/: gui.py  im_sort_out.py  index.py
supermemo_toolkit/sa_sync/: anki2sm.py  sm2anki.py
supermemo_toolkit/title_complete/: fix_idea.md  node_tcomp.py  tcomp.py  xml_tcomp.py
supermemo_toolkit/utilscripts/: ankinet.py  config.py  ulils.py
test/: 2.py  3.py  5.py  6.py  web_import.py
tests/: decrypt_aes_cfb.py
tests/anki/: 1.py  main.py  semantic_classification.py  sent.py  synonym.py  tts.py  visual.py  web_import.py  zhipu.py  简化例句.py
tests/anki/1368/: create_anki_card.py
tests/anki/anki2sm/: idea.py
tests/anki/first-model/: sent.py
tests/anki/least-model/: style.css  反面.html
tests/anki/model/: 函数片段.html
tests/anki/model-2025-09-26/: 正面.html
tests/anki/res/: 1368.xlsx  2000.xlsx  Simpsonetal2012-SupplementaryMaterial.xlsx  ordered_synonym_words.csv  函数片段.html  柯林斯词典词频分级词汇(1-5星).xlsx  正面.html
tests/anki/test/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  qa_sent.py  ruby_a.js  sentence.py  sound.py  star.py  testify.py  tidmeRead.py  uk.py  web_import.py  xlsx.py  简化例句.py
tests/anki/until/: cmp_2word.py  python_lzo-1.16-cp312-cp312-win_amd64.whl
tests/anki/内容模版/: Untitled-1.html  cr.html
tests/anki/意境语义/: auto_deck.py  sent.py  反面.html
tests/anki/词义分类/: dehtml.html  index.py  update.py
tests/cad/: unlk.lsp
tests/epub2anki/: epub_sent.py
tests/epub2sm/: fix.py  format_head.py  split_htm.py  test.py
tests/lifeup/: 人升定时程序.js  人升时间管理.js
tests/pathpix/: 1.py  11.py  7.py  8.py  9.py  web_import.py
tests/picbed/: app.py
tests/supermemo/: FocusSnapshot.py  MANIFEST.xml  dfm_parser.py  fix_codepage.py  fix_ui.py  get_sm_html.py  htm_ascii_fix.py  imghex.py  patch_font.py  sm_text_registry.py  sm_tree.py  struct.md
tests/supermemo/extracted/: ADDRESSDLG.dfm  ADDTRANSCRIPTION.dfm  ALIGNDLG.dfm  ANALYSISDLG.dfm  ANCESTORS.dfm  BACK.dfm  BRIMP.dfm  BROWSER.dfm  BROWSERFORM.dfm  CHANGECOMPSIZE.dfm  CHECKSDLG.dfm  CHOICESDLG.dfm  COMMANDERDLG.dfm  COMPONENTEDITOR.dfm  CONCEPTEDITOR.dfm  CONCEPTMAPFORM.dfm  CONCEPTSELECTBOX.dfm  CONTENTS.dfm  CONTRIBUTIONS.dfm  ELDATAWIND.dfm  ELEMENTFILTER.dfm  ELPARAMDLG.dfm  ELWIND.dfm  FAQDLG.dfm  FILEBROWSER.dfm  GETINTERVALDLG.dfm  HITEDITOR.dfm  HTMLFORM.dfm  IMGDOWN.dfm  IMGSCALER.dfm  (+62 more)
tests/title_complete/: fix_idea.md
tests/tts/: CopyTTS.ps1  getText.py  htmplain.py  maddec.py  playaudio.py  simple.py  test.py  test2.py  test_ui.py
tests/wps.js/: 2_wps.js  生成与查询开卡行API.http
tests/研究生信息检索/: main.py
(+21 files in other folders)
