[tool.poetry]
name = "smtk"
version = "0.0.8"
description = "SuperMemo 增强工具集，命令工具"
authors = ["mingyue"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
chardet = "^5.2.0"
docopt = "^0.6.2"
ebooklib = "^0.18"
pillow = "^10.2.0"
pypinyin = "^0.50.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
python-magic = "^0.4.27"
python-magic-bin = "^0.4.14"
shutils = "^0.1.0"
psutil = "^5.9.8"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
