[tool.poetry]
name = "supermemo-toolkit"
version = "0.1.7"
description = "SuperMemo 增强工具（CLI命令行）。包含图链整理、EPUB图书转换导入、Latex公式转图片等。"
license = "GPL-2.0-only"
authors = ["mingyue <mingyue42w@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/Zacharia2/SuperMemo-Toolkit"
repository = "https://github.com/Zacharia2/SuperMemo-Toolkit"
documentation = "https://docs.qq.com/doc/DQnRpb0VNUEVvR3dl"
keywords = ["supermemo", "cli-app", "tooltik"]
classifiers = [
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
packages = [{ include = "supermemo_toolkit" }]
include = ["docs"]
exclude = [
    "docs/samples",
    "docs/epub2sm_Ideas.md",
    "docs/indexer_idea.md",
    "docs/json Invalid escape.md",
    "docs/pathpix_Ideas.md",
]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
chardet = "^5.2.0"
click = "^8.1.7"
ebooklib = "^0.18"
pillow = "^11.1.0"
pypinyin = "^0.53.0"
matplotlib = "^3.8.2"
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32'" }
python-magic = { version = "^0.4.22", markers = "sys_platform != 'win32'" }
tqdm = "^4.66.1"
requests = "^2.31.0"
pyquery = "^2.0.0"
filetype = "^1.2.0"
readmdict = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
smtk = "supermemo_toolkit.smtk:main"
# marker_single = "convert_single:main"
# marker_chunk_convert = "chunk_convert:main"

#设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
