[project]
name = "supermemo-toolkit"
version = "0.1.21"
description = "SuperMemo 增强工具(CLI命令行)。包含图链整理、EPUB图书转换导入、Latex公式转图片、sm2anki、修补导出标题乱码、卡片朗读等。"
readme = "README.md"
keywords = ["supermemo", "cli-app", "tooltik"]
classifiers = [
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
authors = [{ name = "tingshu", email = "xinglan42w@outlook.com" }]
license = { text = "GPL-2.0-only" }
requires-python = "<4.0,>=3.10"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.13.3",
    "chardet<6.0.0,>=5.2.0",
    "click<9.0.0,>=8.1.7",
    "ebooklib<1.0,>=0.18",
    "pillow<12.0.0,>=11.1.0",
    "pypinyin<1.0.0,>=0.53.0",
    "matplotlib<4.0.0,>=3.8.2",
    "python-magic-bin<1.0.0,>=0.4.14; sys_platform == \"win32\"",
    "python-magic<1.0.0,>=0.4.22; sys_platform != \"win32\"",
    "tqdm<5.0.0,>=4.66.1",
    "requests<3.0.0,>=2.31.0",
    "yattag<2.0.0,>=1.16.1",
    "filetype<2.0.0,>=1.2.0",
    "pyquery<3.0.0,>=2.0.0",
    "pywinauto>=0.6.9",
    "edge-tts>=7.2.3",
    "pyperclip>=1.11.0",
    "sounddevice>=0.5.3",
    "miniaudio>=1.61",
    "numpy>=2.2.6",
]

# [dependency-groups]
# dev = [
#     "premailer<4.0.0,>=3.10.0",
#     "pystache<1.0.0,>=0.6.7",
#     "readmdict<1.0.0,>=0.1.1",
#     "python-lzo @ file:///${PROJECT_ROOT}/supermemo_toolkit/libs/python_lzo_win_amd64/python_lzo-1.16-cp310-cp310-win_amd64.whl",
# ]

[project.urls]
homepage = "https://github.com/Zacharia2/SuperMemo-Toolkit"
repository = "https://github.com/Zacharia2/SuperMemo-Toolkit"
documentation = "https://docs.qq.com/doc/DQnRpb0VNUEVvR3dl"

[project.scripts]
smtk = "supermemo_toolkit.smtk:main"

[tool.pdm.build]
includes = ["supermemo_toolkit", "docs"]
excludes = ["docs/**"]

[[tool.pdm.source]]
name = "tencent"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
